# biteplate

./: CLAUDE.md  README.md  docker-compose.yml  project.txt
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  deps.py  main.py
backend/app/domain/: __init__.py  billing.py  errors.py  history.py  kitchen.py  menu.py  notifications.py  orders.py  pricing.py  staff.py  tables.py
backend/app/infra/: db.py  events.py  models.py  repositories.py  seed.py  tasks.py
backend/app/services/: _security.py  auth.py  billing.py  kitchen.py  ordering.py  reporting.py  tables.py
backend/app/web/: htmx.py  schemas.py
backend/app/web/routers/: auth.py  billing.py  kitchen.py  order.py  report.py  seat.py  sse.py
backend/app/web/static/: app.css
backend/app/web/templates/: base.html
backend/app/web/templates/pages/: bill.html  bills.html  dashboard.html  kitchen.html  login.html  order.html  report.html  tables.html
backend/app/web/templates/partials/: bill_doc.html  flash.html  kitchen_board.html  kitchen_card.html  order_item_row.html  order_summary.html  report_table.html  table_card.html
backend/tests/: conftest.py  test_auth.py  test_billing.py  test_kitchen_flow.py  test_ordering.py  test_reporting.py  test_tables.py
diagrams/: activity_history.puml  activity_order.puml  command.puml  core_class.puml  derived_2d.puml  derived_snippet.py  observer.puml  strategy.puml
