[project]
name = "biteplate-web"
version = "0.1.0"
description = "BitePlate enterprise web port (FastAPI + HTMX) of the console OOP prototype."
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "gunicorn",
    "jinja2",
    "python-multipart",
    "sqlalchemy>=2.0",
    "alembic",
    "psycopg[binary]",
    "pydantic-settings",
    "redis>=5",
    "celery>=5",
    "sse-starlette",
    "starsessions",
    "passlib[bcrypt]",
    "bcrypt<4.1",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "httpx"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
